--- a/css/index.css
+++ b/css/index.css
@@ -28,6 +28,8 @@ body {
   justify-content: center;
   align-items: center;
   min-height: 100vh;
+  /* background-color: rgba(0,0,0,0.7); */
+  
 }
 
 .light {
@@ -107,7 +109,7 @@ body {
 
 .card1 {
     position: relative;
-    width: 600px;
+    width: 50%;
     height: 350px;
     border-radius: 20px;
     display: flex;
@@ -195,7 +197,7 @@ body {
 /*card2*/
 .card2 {
     position: relative;
-    width: 600px;
+    width: 50%;
     height: 350px;
     border-radius: 20px;
     display: flex;
@@ -278,6 +280,25 @@ body {
     font-weight: bold;
     margin-top: 10px;
 }
+
+
+#s2video {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: -1;
+    position: absolute;
+    opacity: 0.5;
+}
+
+#s2video:hover {
+    opacity: 1;
+}
+
+
+
+
+
 
 
 
