--- a/css/index.css
+++ b/css/index.css
@@ -6,7 +6,7 @@ body {
   margin: 0;
   padding: 0;
   height: 100vh;
-  width: 100vw;
+  width: 100%;
   /* white-space: nowrap; */
   user-select: none;
   overflow-y: auto;
@@ -21,7 +21,7 @@ body {
 }
 
 .container > div {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   border: 5px solid red;
   overflow: hidden;
