--- a/index1/css/style.css
+++ b/index1/css/style.css
@@ -81,6 +81,26 @@ body {
   opacity: 1;
   transition: all .7s ease-out;
 }
+.content.count2.hover {
+  opacity: 1;
+  transition: all .7s ease-out;
+}
+.content.count3.hover {
+  opacity: 1;
+  transition: all .7s ease-out;
+}
+.content.count4.hover {
+  opacity: 1;
+  transition: all .7s ease-out;
+}
+.content.count5.hover {
+  opacity: 1;
+  transition: all .7s ease-out;
+}
+.content.count6.hover {
+  opacity: 1;
+  transition: all .7s ease-out;
+}
 
 /*制作content*/
 .list-item .content {
@@ -88,16 +108,30 @@ body {
   width: 80%;
   height: 65%;
   position: absolute;
-  top: 55%;
+  top: -10%;
   left: 50%;
-  transform: translate(-50%,-50%);
+  transform: translate(-50%, 50%);
   display: flex;
   transition: all .7s ease-out;
   flex-direction: column;
-  border-radius: 50px;
+  border-radius: 55px;
   /* visibility: hidden; */
   opacity: 0;
-
+  background: inherit;
+  overflow: hidden;
+}
+.content::before {
+  content: "";
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  overflow: hidden;
+  background: inherit;
+  box-shadow: inset 0 0 100px 300px rgba(255, 255, 255, 0.75);
+  filter: blur(15px);
+  z-index: -1;
 }
 
 .list-item .content h1,p {
@@ -145,7 +179,7 @@ body {
   width: 100%;
   height: 100%;
   transition: all 0.3s ease;
-  background-color: rgba(0, 0, 0, .4);
+  background-color: rgba(0, 0, 0, 0.65);
 }
 
 .item-image img {
