--- a/css/index.css
+++ b/css/index.css
@@ -21,7 +21,7 @@ body {
 .container > div {
   width: 100%;
   height: 100vh;
-  /* border: 5px solid red; */
+  border: 5px solid red;
   overflow: hidden;
 }
 /* s3制作 */
