--- a/css/index.css
+++ b/css/index.css
@@ -22,7 +22,6 @@ body {
   width: 100%;
   height: 100vh;
   overflow: hidden;
-
 }
 /* s3制作 */
 .container .sc3 {
@@ -84,6 +83,7 @@ body {
   position: absolute;
   bottom: 0;
   z-index: 1;
+  cursor: pointer;
 }
 
 .sc1 p{
@@ -91,7 +91,7 @@ body {
 }
 
 .sc1 .vidtitle{
-  font-size: 50px;
+  font-size: 70px;
   margin: 50px;
 }
 
@@ -111,10 +111,12 @@ body {
 
 .sc1 .vidintro{
   position: absolute;
-  bottom: 0;
+  bottom:-10px;
   right: 0;
   width: 50%;
   margin: 50px;
+  text-indent: 2em;
+  font-size: 19px;
 }
 
 .sc2 {
