--- a/index1/css/style.css
+++ b/index1/css/style.css
@@ -126,12 +126,12 @@ body {
 }
 
 .timecard p {
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 7rem;
+  font-family: 'Franklin Gothic Medium',Helvetica, sans-serif;
+  font-size: 6rem;
   display: block;
   text-align: center;
   /* font-weight: bold; */
-  margin-top: -115px;
+  margin-top: -110px;
 }
 
 
@@ -158,6 +158,10 @@ body {
   opacity: 1;
   visibility: visible;
 } */
+
+.content{
+  padding: 40px;
+}
 
 .content.count1.hover {
   opacity: 1;
