--- a/css/index.css
+++ b/css/index.css
@@ -52,6 +52,8 @@ body {
 .sc1 .vidtitle{
   font-size: 50px;
   margin: 50px;
+  display: none;  
+  font-family: "STZhongsong";
 }
 
 .sc1 .vidsubtitle{
@@ -68,12 +70,15 @@ body {
   100%{ opacity: 1; }
 }
 
+
 .sc1 .vidintro{
   position: absolute;
   bottom: 0;
   right: 0;
   width: 50%;
   margin: 50px;
+  display: none;
+  font-family: "STZhongsong";
 }
 
 .sc2 {
@@ -105,6 +110,8 @@ body {
   margin: 0;
   padding: 0;
   font-size: 8.5rem;
+  font-family: "STZhongsong";
+  font-weight: bolder;
   letter-spacing: 2.5rem;
   position: relative;
   /* animation: spotlight 5s infinite; */
@@ -176,7 +183,7 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: transparent;
+    background-color: #1d1a2c;
     clip-path: circle(120px at center);
     transition: .5s;
     border-radius: 20px;
@@ -272,7 +279,7 @@ body {
 }
 
 .card2:hover .circle {
-    background-color: rosybrown;
+    background-color: rgb(150, 113, 113);
     clip-path: circle(100% at center);
 }
 
@@ -326,7 +333,7 @@ body {
 .card2 .content a {
     display: inline-block;
     background: #fff;
-    color: #0165c3;
+    color: rgb(150, 113, 113);
     padding: 10px 20px;
     border-radius: 4px;
     text-decoration: none;
