--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "shangwei";
-  src: url(../shangwei.ttf);
+  src: url(../XinDiZhaoMeng-1.otf);
 }
 
 body {
@@ -44,8 +44,8 @@ body {
   justify-content:center;
   align-items: center;
   font-family: shangwei;
-  text-shadow:0 0 3px #FFCDC5,
-  0 0 6px #FFCDC5;
+  text-shadow:0 0 4px #FFCDC5,
+  0 0 8px #FFCDC5;
 }
 .last .letter1 {
   font-size: 8rem;
@@ -80,6 +80,7 @@ body {
         line-height: 120vh;
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
+        font-family: shangwei;
         position: relative;
         /* z-index: 2; */
         text-align: center;
