--- a/index1/css/style.css
+++ b/index1/css/style.css
@@ -28,10 +28,10 @@ body {
 }
 /*点你卡牌*/
 .timecard {
-  margin: 20px auto;
-  width: 400px;
-  height: 100px;
-  border-radius: 40px;
+  margin: 1.25rem auto;
+  width: 25rem;
+  height: 6.25rem;
+  border-radius: 2.5rem;
   box-shadow: 5px 5px 30px 7px rgba(0,0,0,0.25), -5px -5px 30px 7px rgba(0,0,0,0.22);
   cursor: pointer;
   transition: 0.4s;
@@ -42,10 +42,10 @@ body {
 }
 .jiantou {
   position: absolute;
-  height: 50px;
-  width: 400px;
+  height: 3rem;
+  width: 25rem;
   background-color:transparent;
-  top: 30px;
+  top: 1.875rem;
   left: 63vh;
   transition: all .3s ease-out;
   opacity: 0;
@@ -92,8 +92,8 @@ body {
   letter-spacing: 3px;
   margin: 0 auto;
   position: absolute;
-  top: 10px;
-  left: 60px;
+  top: 0.625rem;
+  left: 3.75rem;
   color: aqua;
   font-family: fantasy;
 }
@@ -129,7 +129,7 @@ body {
   display: block;
   text-align: center;
   /* font-weight: bold; */
-  margin-top: -110px;
+  margin-top: -6.875rem;
 }
 
 
@@ -219,17 +219,17 @@ body {
 }
 
 .list-item .content h1,p {
-  font-size: 20px;
+  font-size: 1.25rem;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .list-item .content h1   {
-  font-size: 40px;
-  margin: 20px auto;
+  font-size: 2.5rem;
+  margin: 1.25rem auto;
   
 }
 .list-item .content p {
-  text-indent: 2em;
+  text-indent: 2rem;
 }
 
 
@@ -287,4 +287,64 @@ body {
 
 .item-desc {
   font-size: 1.2rem;
+}
+
+@media screen and (max-width: 1600px) {
+  html {
+      font-size: 16px;
+  }
+}
+@media screen and (max-width: 1500px) {
+  html {
+      font-size: 15px;
+  }
+}
+
+@media screen and (max-width: 1400px) {
+  html {
+      font-size: 14px;
+  }
+}
+
+@media screen and (max-width: 1200px) {
+  html {
+      font-size: 12px;
+  }
+}
+@media screen and (max-width: 1000px) {
+  html {
+      font-size: 10px;
+  }
+  #s1video{
+    top: 130px;
+  }
+}
+
+@media screen and (max-width: 900px) {
+  html {
+      font-size: 8px;
+  }
+  #s1video{
+    top: 200px;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  html {
+      font-size: 7px;
+  }
+  #s1video{
+    top: 200px;
+  }
+}
+@media screen and (max-width: 600px) {
+  html {
+      font-size: 5px;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  html {
+      font-size: 4px;
+  }
 }
