--- a/index2/styles/index2.css
+++ b/index2/styles/index2.css
@@ -11,7 +11,7 @@
     h1{
         width: 100%;
         text-align: center;
-        font-size: 50px;
+        font-size: 3rem;
         color: rgb(255, 145, 0);
     }
 
@@ -24,8 +24,8 @@
         width: 80%;
         height: auto;
         margin-left: -100%;
-        margin-bottom: 40px;
-        margin-top: 50px;
+        margin-bottom: 2.5rem;
+        margin-top: 3rem;
         display: flex;
         align-items: center;
         position: relative;
@@ -65,7 +65,7 @@
         position: absolute;
         right:1%;
         top: 1%;
-        font-size: 30px;
+        font-size: 1.9rem;
         font-weight: 900;
         color: rgb(13,13,13);
     }
@@ -74,7 +74,7 @@
         position: absolute;
         left:1%;
         top: 1%;
-        font-size: 30px;
+        font-size: 1.9rem;
         font-weight: 900;
         color: rgb(13,13,13);
     }
@@ -102,7 +102,7 @@
         position: absolute;
         top: -60px;
         right: 10px;
-        font-size: 25px;
+        font-size: 1.5625rem;
     }
 
     .imgbox > img{
@@ -115,7 +115,7 @@
         width: 100%;
         position: absolute;
         display: flex;
-        top:10px;
+        top: 10px;
         font-size: 2.2vh;
     }
 
