--- a/css/index.css
+++ b/css/index.css
@@ -442,6 +442,69 @@ body {
 #s2video:hover {
     opacity: 1;
 }
+/* 
+第三屏制作 */
+
+.comparison {
+  --image: url(../imgs/sc2_3.jpg);
+  --height: 100vh;
+  width: 100%;
+  height: var(--height);
+  position: relative;
+  background-position: center;
+  overflow: hidden;
+  box-shadow: 0px 2px 6px rgba(0, 0, 0, .15);
+  border-radius: 4px;
+}
+
+.comparison::before,
+.comparison::after {
+  content: '';
+  display: block;
+  width: inherit;
+  height: inherit;
+  background-size: cover;
+  background-image: var(--image);
+  background-repeat: no-repeat;
+  background-position: center;
+  object-fit: cover;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.comparison::before {
+  filter: grayscale(100%);
+}
+
+.comparison::after {
+  clip-path: inset(0 0 0 calc((var(--slide) / 10) * 1%));
+}
+
+.slider {
+  -webkit-appearance: none;
+  appearance: none;
+  outline: none;
+  margin: 0;
+  background: transparent;
+  z-index: 3;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+}
+
+.slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 14px;
+  height: var(--height);
+  background: #000;
+  box-shadow: 0px 0px 6px rgba(0, 0, 0, .5);
+  border-radius: 15px;
+  cursor: ew-resize;
+}
 
 @media screen and (max-width: 1600px) {
   html {
