--- a/css/index.css
+++ b/css/index.css
@@ -523,6 +523,22 @@ body {
   transition-duration: 500ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
+.section::after {
+  position: absolute;
+  z-index: -2;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, .2);
+  color: rgba(0, 0, 0, .3);
+  transition: background-color .7s ease,color .7s ease;
+  content: '';
+}
+.section:hover::after {
+  background-color: rgba(0, 0, 0, 0.05);
+  color: rgba(0, 0, 0, 0.1);;
+}
 .section:nth-child(1) {
   top: 0;
   left: 0;
