--- a/css/index.css
+++ b/css/index.css
@@ -223,6 +223,7 @@ body {
   background-clip: text;
 }
 
+
 @keyframes spotlight {
   0% {
     -webkit-clip-path: ellipse(100px 100px at 0% 50%);
@@ -482,6 +483,7 @@ body {
   clip-path: inset(0 0 0 calc((var(--slide) / 10) * 1%));
 }
 
+
 .slider {
   -webkit-appearance: none;
   appearance: none;
@@ -496,6 +498,7 @@ body {
   left: 0;
 }
 
+
 .slider::-webkit-slider-thumb {
   -webkit-appearance: none;
   appearance: none;
@@ -506,6 +509,8 @@ body {
   border-radius: 15px;
   cursor: ew-resize;
 }
+
+
 .sc2_9 {
   position: relative;
 }
@@ -530,15 +535,20 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, .2);
+  background-color: rgba(0, 0, 0, .7);
   color: rgba(0, 0, 0, .3);
   transition: background-color .7s ease,color .7s ease;
   content: '';
 }
 .section:hover::after {
-  background-color: rgba(0, 0, 0, 0.05);
+  background-color: rgba(0, 0, 0, 0.15);
   color: rgba(0, 0, 0, 0.1);;
 }
+
+.section:hover .demo-box {
+  opacity: 1;
+}
+
 .section:nth-child(1) {
   top: 0;
   left: 0;
@@ -616,6 +626,7 @@ body {
   justify-content: center;
   align-items: center;
   color: #fff;
+  opacity: 0;
   font-size: 2rem;
   font-weight: 300;
 }
@@ -627,6 +638,11 @@ body {
   will-change: opacity;
   min-width: 100%;
   min-height: 100%;
+}
+
+.video:nth-of-type(2) {
+  min-height: none;
+  min-width: none;
 }
 
 .section.is-expanded .video {
